<resources>
    <string name="label_mobile_number">Mobile number</string>
    <string name="label_otp">Otp</string>
    <string name="label_name">Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_email">Email</string>
    <string name="label_skip">Skip</string>
    <string name="login_button_text">Let\'s Time Pass</string>
    <string name="otp_verify_button_text">Verify Otp</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="quoto_exceed">Quota exceeded</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="agree_to_terms_and_privacy">You must agree to continue</string>
    <string name="permission_title">Permission</string>
    <string name="permission_message">we need permission for read images</string>
    <string name="permission_denied_message">If you reject permission,you can not use this service</string>
    <string name="download_started">Download started</string>
    <string name="download_completed">Download Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="invalid_email">Invalid email</string>
    <string name="enter_name">Enter name</string>
    <string name="fragment_user_video_list">fragment_user_video_list</string>
    <string name="fragment_category">fragment_category</string>
    <string name="fragment_profile">fragment_profile</string>
    <string name="comments">Comment\'s</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description (Optional)</string>
    <string name="label_upload_video">Upload Video</string>
    <string name="label_upload_image">Upload Image</string>
    <string name="invalid_title">Enter title</string>
    <string name="invalid_file">Invalid file</string>
    <string name="select_video_max_time">Select 60 seconds video</string>
    <string name="label_edit_video">Edit video</string>
    <string name="label_next">Next</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="under_line_text"><u>%1$s</u></string>
    <string name="search_user">Search user</string>
    <string name="search_video">Search video</string>
    <string name="label_bio">Bio</string>
    <string name="label_youtube_link">YouTube profile link</string>
    <string name="label_youtube_profile">YouTube Profile</string>
    <string name="invalid_youtube_profile">Invalid YouTube Profile</string>
    <string name="label_logout">Logout</string>
    <string name="label_download">Download</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="terms_policy">Agree to our Terms of Use and Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://timepass.net.in/privacy-policy.html</string>
    <string name="terms_and_conditions_url">https://timepass.net.in/terms-and-conditions.html</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="live_indicator">on-air</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stream_name">Stream Name</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>
    <string name="live">Live</string>
    <string name="go_live">Go Live</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="exit">Exit</string>
    <string name="exit_live_message">Are you sure to end Live?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added">Added</string>
    <string name="modified">Modified</string>
    <string name="removed">Removed</string>
    <string name="loading">Loading… Please wait</string>
    <string name="connecting">Connecting… Please wait</string>
    <string name="close_live_msg">Are you sure to Close Live session?</string>
    <string name="video_stream_error">Unable to play</string>
    <string name="video_ended">This video has been ended</string>
    <string name="write_something">Write something...</string>
    <string name="no_topis_available">No topics available</string>

    <string name="dummy_6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="no_more_videos">No more videos to load</string>
    <string name="file_format">File Format</string>
    <string name="scroll_down">Loading Ad…\nScroll to see more videos..</string>
    <string name="title_activity">Activity</string>
    <string name="no_activities_available">No activities available!</string>

</resources>
