<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tbProfile"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbProfile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/activity_margin_vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="@dimen/activity_margin_vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/activity_margin_horizontal" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/activity_margin_horizontal" />

                <ImageView
                    android:id="@+id/ivProfilePicture"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/guidelineTop"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/ivProfilePicture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/tilName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilBio"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/tilEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtBio"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_bio"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

 <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilYouTubeLink"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/tilBio">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtYouTubeLink"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_youtube_link"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilMobileNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/tilYouTubeLink">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMobileNumber"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/label_mobile_number"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/label_submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>