<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tbUploadVideo"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbUploadVideo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/activity_margin_vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="@dimen/activity_margin_vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/activity_margin_horizontal" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/activity_margin_horizontal" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/guidelineTop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTitle"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_title"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/tilTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_200"
                        android:gravity="top"
                        android:hint="@string/label_description"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxHeight="@dimen/dp_200"
                        tools:text="@tools:sample/lorem/random" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    style="@style/AppTheme.TextAppearance.RobotoRegular.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/label_submit"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tilDescription"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>